# apps/api/app/main.py
@@ -1,7 +1,7 @@
 from fastapi import FastAPI
 from fastapi.middleware.cors import CORSMiddleware
 
-from app.routes import challenges, health, recommendations, sessions, users
+from app.routes import health, recommendations, users
 
 app = FastAPI(title="Beerolog API", version="0.0.1")
 
@@ -15,6 +15,4 @@ app.add_middleware(
 
 app.include_router(health.router)
 app.include_router(recommendations.router)
-app.include_router(sessions.router)
 app.include_router(users.router)
-app.include_router(challenges.router)
